# CLI-file-manager

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: cli.py  system.py
src/core/: auth.py  buildParser.py  config.py  databaseAccessor.py  databaseManager.py
src/core/models/: models.py
src/core/models/alembic/: env.py
src/core/models/alembic/versions/: 9768df3b7fbd_.py  9a2b73fca932_.py
src/files/: accessor.py  files.py  manager.py
src/models/: files.py  operations.py  users.py
src/operations/: accessor.py  enum.py  operations.py
src/users/: accessor.py  errors.py  manager.py  users.py
