[project]
name = "cli-file-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "argparse>=1.4.0",
    "asyncpg>=0.30.0",
    "defusedxml>=0.7.1",
    "dotenv>=0.9.9",
    "mypy-extensions>=1.1.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "ruff>=0.14.4",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-orm>=1.2.10",
    "typing-extensions>=4.15.0",
]
